--- a/assignment_3_matrix_computation_exc.ipynb
+++ b/assignment_3_matrix_computation_exc.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b45a268b",
    "metadata": {},
    "outputs": [
@@ -134,19 +134,31 @@
      "output_type": "stream",
      "text": [
       "A random matrices A:\n",
-      "[[-7, 9, 2, -9, 0], [-7, 8, 6, 7, 6], [-6, 0, 5, 8, 4], [-6, -7, 5, 8, 2], [-6, 6, 7, 3, 1]]\n",
+      "[[-3, -2, -5, -6, 3], [-3, -1, -3, 8, -8], [-3, 4, -4, 8, 0], [-3, 4, 0, 8, -8], [-3, 1, 2, -4, 2]]\n",
       "----------------------------------------------------------------------\n",
       "The coefficient matrix A: \n",
-      "[[-4, -7, 4, -2, 2], [-3, -8, 0, -6, 6], [-3, 8, -9, 1, -1], [-3, 6, 4, 2, -6], [-2, 7, 1, -3, -9]]\n",
+      "[[7, 0, 1, -5, 3], [8, -1, -9, -5, 6], [8, 5, 9, -4, -5], [8, 2, -9, 3, 4], [8, 2, -4, 3, -4]]\n",
       "----------------------------------------------------------------------\n",
       "Right-hand vector b: \n",
-      "[[-2, 1, 8, -9, 2], [-2, 8, 0, 5, -4], [-2, 7, -6, 6, -9], [-1, -3, 9, -6, 6], [-1, 7, 5, 1, 3]]\n",
+      "[[8], [8], [8], [8], [8]]\n",
       "----------------------------------------------------------------------\n",
       "Actual soluation x: \n",
-      "[[0.5112781954887219, -0.42515379357484584, -1.0745044429254962, 1.0861244019138774, 0.1982228298017769], [0.030075187969924963, -0.07313738892686306, -0.31989063568010917, 1.956937799043062, 0.04374572795625481], [0.08270676691729344, -0.8147641831852364, 0.8475734791524265, 0.26794258373205804, 1.0293916609706089], [0.05075187969924791, -1.3904647983595346, 0.36927546138072476, -2.089712918660287, 0.21018455228981528], [0.013157894736842202, -0.36722488038277556, -0.5944976076555021, 1.8959330143540667, -0.29904306220095644]]\n",
+      "[[1.189123540921665], [-0.3897172930301578], [0.1943188718709936], [0.1765063086161528], [0.12144929491937084]]\n",
       "----------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------\n",
-      "[[-2.0, 0.9999999999999973, 8.0, -9.000000000000004, 2.000000000000001], [-1.9999999999999996, 7.9999999999999964, 0.0, 4.999999999999993, -3.999999999999999], [-2.000000000000001, 7.000000000000001, -5.9999999999999964, 5.999999999999989, -9.0], [-0.9999999999999994, -3.000000000000002, 9.000000000000002, -6.000000000000002, 6.000000000000003], [-0.9999999999999991, 6.999999999999998, 4.999999999999999, 0.9999999999999964, 3.000000000000001]]\n"
+      "Estimated soluation x_est: \n",
+      "[[ 1.189]\n",
+      " [-0.39 ]\n",
+      " [ 0.194]\n",
+      " [ 0.177]\n",
+      " [ 0.121]]\n",
+      "and \n",
+      "absolute diff|x-x_est| upto 10-th decimal place: \n",
+      "[[0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]]\n",
+      "----------------------------------------------------------------------\n"
      ]
     }
    ],
@@ -171,7 +183,7 @@
     "\n",
     "\n",
     "x_est, INV_A = soln_n_equations_n_unknowns(A, b) # Please uncomment the next line         \n",
-    "# print('Estimated soluation x_est: \\n{}\\nand \\nabsolute diff|x-x_est| upto {}-th decimal place: \\n{}' .format(np.round(x_est, 3), error_decimal, np.round(np.abs(x-x_est), error_decimal)))\n",
+    "print('Estimated soluation x_est: \\n{}\\nand \\nabsolute diff|x-x_est| upto {}-th decimal place: \\n{}' .format(np.round(x_est, 3), error_decimal, np.round(np.abs(np.array(x)-np.array(x_est)), error_decimal)))\n",
     "print('-'*70)      \n",
     "\n",
     "#print(matrix_multiplication(A,x_est))\n",
